<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv"
                android:src="@drawable/copo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tvNome"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvPeso"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso" />

            <EditText
                android:id="@+id/etPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tvHoraAcorda"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hAcorda" />

            <TimePicker
                android:id="@+id/tpHoraAcorda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/tvHoraIncorreta"
                android:textColor="@color/red"
                android:visibility="gone"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hIncorreta" />

            <TextView
                android:id="@+id/tvHoraDorme"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hDorme" />

            <TimePicker
                android:id="@+id/tpHoraDorme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:timePickerMode="spinner" />

            <Button
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/save"
                android:textColor="@color/white"
                tools:visibility="visible" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>